@@ -108,6 +108,9 @@ Release 0.6.0 -  Unreleased
     HIVE-675. add database/schema support Hive QL
     (Carl Steinbach via namit)
 
+    HIVE-1427. Add metastore schema migration scripts (0.5 -> 0.6)
+    (Carl Steinback via namit)
+
   IMPROVEMENTS
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
